log
Sat 26 Aug 2023 08:26:24 PM UTC: 
 tests:  0|6
total_score: 0/70
cdca662
Sat 26 Aug 2023 09:01:26 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:7: error: expected ‘;’ before ‘nuevaLita’
   35 |       nuevaLita->tail = NULL;
      |       ^~~~~~~~~
Compilation failed
e5f38a3
Sat 26 Aug 2023 09:01:41 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
3f424e5
